Using spring boot jdbctemplate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ server.port = 8088
 
 #banner set
 banner.location=classpath:banner.txt
+
+#Mysql Jdbc
+spring.datasource.url=jdbc:mysql://localhost/smartdb
+spring.datasource.username=root
+spring.datasource.password=****
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
